--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>This is made of tiles or whatever</title>
-  <script type="text/javascript" src="../daimio_composite.js"></script>
+  <script type="text/javascript" src="daimio_composite.js"></script>
 </head>
 <body id="body">
 
